--- a/Programming/SpringBoot/SpringWorkspace/sbb2/src/main/resources/templates/question_detail.html
+++ b/Programming/SpringBoot/SpringWorkspace/sbb2/src/main/resources/templates/question_detail.html
@@ -1,20 +1,10 @@
-<<<<<<< HEAD
-<h1 th:text="${question.subject}"></h1>
-<div th:text="${question.content}"></div>
-<h5 th:text="|${#lists.size(question.answerList)}개의 답변이 있습니다.|"></h5>
-<div>
-    <ul>
-        <li th:each="answer : ${question.answerList}" th:text="${answer.content}"></li> 
-    </ul>
-</div>
-=======
 <html layout:decorate="~{layout}">
 <div layout:fragment="content" class="container my-3">
     <!-- 질문 -->
     <h2 class="border-bottom py-2" th:text="${question.subject}"></h2>
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-apace: pre-line;" th:text="${question.content}"></div>
+            <div class="card-text" style="white-space: pre-line;" th:text="${question.content}"></div>
             <div class="d-flex justify-content-end">
                 <div class="badge bg-light text-dark p-2 text-start">
                     <div th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></div>
@@ -22,7 +12,6 @@
             </div>
         </div>
     </div>
->>>>>>> 14a3f118e8ac12d2419d5522dc39a818dec32be3
 
     <!-- 답변의 갯수 표시 -->
     <h5 class="border-bottom my-3 py-2"
