--- a/Programming/SpringBoot/office_sbb/sbb/src/main/resources/templates/question_list.html
+++ b/Programming/SpringBoot/office_sbb/sbb/src/main/resources/templates/question_list.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
-
-<div class="container my-3">
+<!-- <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}"> -->
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container my-3">	
 	<table class="table">
 		<thead class="table-dark">
 			<tr>
@@ -13,10 +13,13 @@
 			<tr th:each="question, loop : ${questionList}">
 				<td th:text="${loop.count}"></td>
 				<td>
-					<a th:href="@{|/question/detail${question.id}}" th:text="${question.subject}"></a>
+					<a th:href="@{|/question/detail/${question.id}}" th:text="${question.subject}"></a>
 				</td>
-				<td th:text="${#temporals.foramt(question.createDate, 'yyyy-MM-dd HH-mm')}"></td>
+				<!-- <td th:text="${question.createDate}"></td> -->
+				<td th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH-mm')}"></td>
 			</tr>
 		</tbody>
 	</table>
+	<a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
 </div>
+</html>
